sn DEG cutoffs and gprofiler

--- a/snRNAseq/scripts/15_post_reclustering_annotations_pass3.Rmd
+++ b/snRNAseq/scripts/15_post_reclustering_annotations_pass3.Rmd
@@ -666,6 +666,9 @@ VlnPlot(dataObject,
         split.by = "seurat_clusters")
 cluster19$gene[1:10]
 
+FeaturePlot(object = subset(dataObject, seurat_clusters == "19"),
+              reduction = "umap",
+              features = c("GAD1", "GAD2"))
 ```
 
 
